--- a/frontend/index.html
+++ b/frontend/index.html
@@ -106,6 +106,32 @@
                         <div class="alert-placeholder">No active breaches</div>
                     </div>
                 </div>
+
+                <!-- Historical Chart -->
+                <div class="card card-full history-card">
+                    <div class="card-header">
+                        <h3>MAC Score History</h3>
+                        <div class="chart-controls">
+                            <button class="btn btn-sm" id="togglePillars" onclick="togglePillarLines()">Show Pillars</button>
+                            <select id="historyRange" onchange="updateHistoryRange()">
+                                <option value="7">7 Days</option>
+                                <option value="30" selected>30 Days</option>
+                                <option value="90">90 Days</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="history-chart-container">
+                        <canvas id="historyChart"></canvas>
+                    </div>
+                    <div class="chart-legend" id="chartLegend">
+                        <span class="legend-item mac"><span class="legend-color"></span>MAC Composite</span>
+                        <span class="legend-item liquidity hidden"><span class="legend-color"></span>Liquidity</span>
+                        <span class="legend-item valuation hidden"><span class="legend-color"></span>Valuation</span>
+                        <span class="legend-item positioning hidden"><span class="legend-color"></span>Positioning</span>
+                        <span class="legend-item volatility hidden"><span class="legend-color"></span>Volatility</span>
+                        <span class="legend-item policy hidden"><span class="legend-color"></span>Policy</span>
+                    </div>
+                </div>
             </div>
         </section>
 
