--- a/frontend/index.html
+++ b/frontend/index.html
@@ -160,7 +160,10 @@
                 <div class="chart-legend backtest-legend">
                     <span class="legend-item mac"><span class="legend-color"></span>MAC Score</span>
                     <span class="legend-item crisis"><span class="legend-color"></span>Crisis Event</span>
-                    <span class="legend-item warning"><span class="legend-color"></span>First Warning</span>
+                    <span class="legend-item zone-critical"><span class="legend-color"></span>Critical (&lt;0.35)</span>
+                    <span class="legend-item zone-stretched"><span class="legend-color"></span>Stretched (0.35-0.50)</span>
+                    <span class="legend-item zone-cautious"><span class="legend-color"></span>Cautious (0.50-0.65)</span>
+                    <span class="legend-item zone-comfortable"><span class="legend-color"></span>Comfortable (&gt;0.65)</span>
                 </div>
                 <div class="backtest-loading" id="backtestLoading">
                     <span>Loading historical FRED data...</span>
