Update to weekly refresh schedule and add UI indicators
- Change workflow from daily to weekly (Saturdays 6 AM UTC)
- Add 'Updated weekly' note to dashboard data status card
- Add 'Weekly data' badge to backtest chart header
- Explains CFTC positioning data releases on Fridays

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -52,6 +52,10 @@
                         <div class="data-indicators" id="dataIndicators">
                             <span class="indicator-count">-- indicators</span>
                         </div>
+                        <div class="data-frequency">
+                            <span class="frequency-icon">&#128197;</span>
+                            <span class="frequency-text">Updated weekly (Saturdays) &mdash; CFTC positioning data releases Fridays</span>
+                        </div>
                     </div>
                 </div>
 
@@ -149,6 +153,7 @@
             <div class="card card-full backtest-chart-card">
                 <div class="card-header">
                     <h3>Market Stress Index with Crisis Events (Real FRED Data, 2006-Present)</h3>
+                    <span class="update-badge">Weekly data</span>
                     <div class="chart-controls">
                         <select id="backtestInterval" onchange="loadBacktestHistory()">
                             <option value="7">Weekly</option>
