feat: Add momentum-based early warning and crisis analysis
Analysis of missed crises:
- MAC excels at systemic credit crises (GFC, COVID)
- Blind spots: flash events, policy surprises, sector blowups
- Root cause: Weekly data, no intraday liquidity, no banking stress

New momentum module (grri_mac/mac/momentum.py):
- MACStatus enum with new DETERIORATING level
- 4-week momentum calculation
- Trend direction: improving/stable/declining/rapidly_declining
- Enhanced status logic: MAC 0.50-0.65 + declining >0.05 = DETERIORATING

Frontend enhancements:
- 4-week trend indicator on dashboard
- Arrow showing direction + numeric change
- Color-coded: green (improving), gray (stable), orange (declining), red (rapid)

Crisis detection improvement analysis:
- Current: 27% trend warning, 36% at crisis
- Projected with all improvements: 55% trend, 64% at crisis
- Irreducible misses: political surprises, sector-specific events

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -77,6 +77,11 @@
                                 <span class="value" id="macMultiplier">--</span>
                                 <span class="tier" id="macTier">--</span>
                             </div>
+                            <div class="momentum-indicator" id="momentumIndicator">
+                                <span class="label">4-Week Trend</span>
+                                <span class="trend-arrow" id="trendArrow">→</span>
+                                <span class="trend-value" id="trendValue">--</span>
+                            </div>
                         </div>
                     </div>
                 </div>
