--- a/frontend/index.html
+++ b/frontend/index.html
@@ -171,6 +171,10 @@
                 <div class="card-header">
                     <h3>Historical Stress Index with Crisis Events</h3>
                     <div class="chart-controls">
+                        <label class="toggle-label">
+                            <input type="checkbox" id="crisisToggle" checked onchange="toggleCrisisEvents()">
+                            <span>Show Crisis Events</span>
+                        </label>
                         <select id="backtestStart" onchange="loadBacktestData()">
                             <option value="1971-01-01">Full History (1971)</option>
                             <option value="1990-01-01">1990-Present</option>
@@ -189,6 +193,11 @@
                     <span class="zone-item stretched">Stretched (0.49-0.58)</span>
                     <span class="zone-item critical">Critical (&gt;0.58)</span>
                     <span class="zone-item crisis">● Crisis Event</span>
+                </div>
+                <div class="crisis-legend">
+                    <span class="crisis-marker extreme">Extreme</span>
+                    <span class="crisis-marker high">High</span>
+                    <span class="crisis-marker moderate">Moderate</span>
                 </div>
             </div>
 
