Add crisis events overlay toggle to history chart

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -126,6 +126,10 @@
                             <input type="checkbox" id="grsToggle" disabled>
                             <span class="toggle-label grs-label">GRS Tracker <span class="coming-soon">(soon)</span></span>
                         </label>
+                        <label class="toggle-btn" title="Show historical crisis events as vertical markers">
+                            <input type="checkbox" id="historyCrisisToggle" onchange="toggleCrisisEvents()" checked>
+                            <span class="toggle-label">Crisis Events</span>
+                        </label>
                     </div>
                 </div>
             </div>
